<resources>
    <string name="app_name">Stellar Techno</string>
    <string name="password">Enter Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>

    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="already_member">Already a member? Login</string>
    <string name="success_message">Registration Successful</string>
    <string name="error_email_exists">Email Exists</string>
    <string name="text_login">Login</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
</resources>