<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stellar_techno_background"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/loginName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_custom"
        android:hint="@string/hint_name"
        android:inputType="text"
        android:padding="15dp"
        android:layout_above="@id/textInputEditTextEmail"
        android:textColor="@color/colorBackground"
        android:textColorHint="@color/colorBackground"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/textInputEditTextEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/colorBackground"
        android:hint="@string/hint_email"
        android:textColorHint="@color/colorBackground"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:layout_above="@id/textInputEditTextPassword"
        android:background="@drawable/edittext_custom"
        android:layout_marginBottom="20dp"
        android:textSize="15sp" />
    <EditText
        android:id="@+id/textInputEditTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/hint_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBackground"
        android:textColorHint="@color/colorBackground"
        android:padding="15dp"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:background="@drawable/edittext_custom"
        android:layout_marginBottom="20dp"
        android:textSize="15sp" />
    <Button
        android:id="@+id/ButtonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputEditTextPassword"
        android:background="@drawable/button_custom"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/colorText"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/text_login"/>

    <TextView
        android:id="@+id/textViewLinkRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_not_member"
        android:textSize="20sp"
        android:textColor="@color/colorBackground"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="114dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="7dp"
        app:srcCompat="@drawable/stellar_techno_logo" />
</RelativeLayout>
